// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-rating #render should render component as expected (1) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" role="spinbutton" tabindex="0">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (2) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" role="spinbutton" tabindex="0" value="0">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (3) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="1" role="spinbutton" tabindex="0" value="1">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (4) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" role="spinbutton" tabindex="0" value="2">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (5) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" role="spinbutton" tabindex="0" value="3">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (6) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="4" role="spinbutton" tabindex="0" value="4">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (7) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="spinbutton" tabindex="0" value="5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (8) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" increment="half" role="spinbutton" tabindex="0">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (9) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" increment="half" role="spinbutton" tabindex="0" value="0">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (10) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0.5" increment="half" role="spinbutton" tabindex="0" value="0.5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (11) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="1" increment="half" role="spinbutton" tabindex="0" value="1">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (12) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="1.5" increment="half" role="spinbutton" tabindex="0" value="1.5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (13) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" increment="half" role="spinbutton" tabindex="0" value="2">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (14) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2.5" increment="half" role="spinbutton" tabindex="0" value="2.5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (15) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" increment="half" role="spinbutton" tabindex="0" value="3">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (16) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3.5" increment="half" role="spinbutton" tabindex="0" value="3.5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (17) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="4" increment="half" role="spinbutton" tabindex="0" value="4">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (18) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="4.5" increment="half" role="spinbutton" tabindex="0" value="4.5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (19) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" increment="half" role="spinbutton" tabindex="0" value="5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (20) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="10" aria-valuemin="0" aria-valuenow="0" max-value="10" role="spinbutton" tabindex="0" value="0">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (21) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="10" aria-valuemin="0" aria-valuenow="5" max-value="10" role="spinbutton" tabindex="0" value="5">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (22) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="10" aria-valuemin="0" aria-valuenow="10" max-value="10" role="spinbutton" tabindex="0" value="10">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (23) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" disabled="" role="spinbutton" tabindex="-1" value="3">
  <template shadowrootmode="open">
    <div class="gux-disabled gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (24) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="true" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" readonly="" role="spinbutton" tabindex="0" value="3">
  <template shadowrootmode="open">
    <div class="gux-rating-star-container">
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
      <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (25) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" compact="" role="spinbutton" tabindex="0">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            0
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (26) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" compact="" role="spinbutton" tabindex="0" value="0">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            0
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (27) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="1" compact="" role="spinbutton" tabindex="0" value="1">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            1
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="1" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (28) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" compact="" role="spinbutton" tabindex="0" value="2">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            2
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (29) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" compact="" role="spinbutton" tabindex="0" value="3">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            3
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (30) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="4" compact="" role="spinbutton" tabindex="0" value="4">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            4
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="4" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (31) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" compact="" role="spinbutton" tabindex="0" value="5">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-solid" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            5
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (32) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2.5" compact="" increment="half" role="spinbutton" tabindex="0" value="2.5">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            2.5
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2.5" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (33) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="true" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" compact="" readonly="" role="spinbutton" tabindex="0" value="3">
  <template shadowrootmode="open">
    <div class="gux-compact gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            3
          </span>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;

exports[`gux-rating #render should render component as expected (34) 1`] = `
<gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" compact="" disabled="" role="spinbutton" tabindex="-1" value="3">
  <template shadowrootmode="open">
    <div class="gux-compact gux-disabled gux-rating-star-container">
      <div class="gux-star-rating-compact">
        <div class="gux-star-rating-label-value">
          <gux-icon decorative="" icon-name="fa/star-sharp-half-stroke-regular" size="small" tabindex="0"></gux-icon>
          <span class="gux-star-rating-value">
            3
          </span>
        </div>
        <div class="gux-edit-rating-button">
          <gux-button accent="inline" disabled="" id="popover-target" tabindex="-1">
            Edit Rating
          </gux-button>
          <gux-popover-beta for="popover-target" position="bottom-start">
            <gux-rating aria-label="Feedback" aria-readonly="false" aria-valuemax="5" aria-valuemin="0" aria-valuenow="3" max-value="5" role="spinbutton" tabindex="0">
              <template shadowrootmode="open">
                <div class="gux-rating-star-container">
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-solid" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                  <gux-icon decorative="" icon-name="fa/star-regular" size="small"></gux-icon>
                </div>
              </template>
            </gux-rating>
          </gux-popover-beta>
        </div>
      </div>
    </div>
  </template>
</gux-rating>
`;
